@@ -1,5 +1,6 @@
 2.0.90 (2.1.0 rc1):
 -Add: Hide main window when started with --replaygain argument
+-Add: Option to eject CD after ripping has been completed (enabled by default)
 
 1.9.90 (2.0.0 rc1):
 -Add: Option to not modify the audio stream of mp3 files when calculating Replay Gain
